style.css
body {
	font-family : Helvetica, Arial, Verdana, sans-serif;
	font-size: 13px;
}

ul, ol {
	list-style: none;	
}

.ui-widget {
	font-family : inherit; 
}

/* .ui-dialog .ui-resizable-se { */
/*     bottom: -2px; */
/*     height: 14px; */
/*     right: 3px; */
/*     width: 14px; */
/* } */

/* .ui-dialog { */
/* 	padding-top : 8px;	 */
/* } */

sup {
	line-height : 0px;	
}

img {
	border : 0px;	
}

a {
	text-decoration: none;
}
a:link {color:navy;}      /* unvisited link */
a:visited {color:purple;}  /* visited link */
a:hover {color:red;}  /* mouse over link */

.inline_block {
	display : inline-block;
	*display : inline;
}

.invalid_input{
	border-color : red;
}

.color_blue {
	background-color : #D0D7F0;
}
.color_purple {
	background-color : #F7D1E4;
}
.color_green {
	background-color : #EDFCD5;
}
.color_yellow {
	background-color : #FFF3D8;
}
.color_azure {
	background-color : #CAEEE8;
}
.color_red {
	background-color : #FFDDD8;
}

.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
	font-size : 1em;
	font-family : inherit;
}	

#header_right {
	float : right;	
}

#aboutLink {
	padding-top : 10px;	
}

/*match placeholder/watermark padding to border+padding for input element*/
label.placeholder {
	cursor: text;
	padding: 4px 4px 4px 4px;
	color: #999999;
}
/* html5 placeholder support */
input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
	color:#999999;
}
input:placeholder, textarea:placeholder {
	color:#999999;
}

#content > div  {
	margin-bottom: 8px;
}

#corpus_id {
	font-family: monospace;
}

#cqp_string {
	font-family: monospace;
	width: 100%
	
}

#header {
	padding-top: 8px;
	width: 100%;
}

#content {
	float: left;
	clear: both;
	width: 100%;
	padding-bottom : 10px;
}

#header img {
	float: left;
	margin-top : -14px;
}


#header p {
	margin: 0px;
	margin-left: 10px;
	/*	border-style:dotted;*/
	/*	border-width:1px;	*/
	/*	text-align:center;*/
}

#num_hits {
	min-width : 37px;	
}

.lang_selected {
	color : black;	
}

#languages {
	list-style: none;
	color : navy;
	padding : 0;
}
#languages li {
	margin : 0 0;
	cursor : pointer;
}

.select_operation .select_language {
	visibility: hidden;
}

.query_table {
	overflow : auto;	
}

.query_row {
}
.query_row table {
	margin-bottom : 15px;
}

.image_button {
/* 	padding : 0 8px; */
/* 	background-repeat: no-repeat; */
}

.insert_arg, .insert_token {
/* 	background-image: url(img/plus.png); */
}
.remove_arg {
/* 	background-image: url(img/minus.png); */
	position: relative;
	top : 15px;
}

.insert_arg {
	margin-top : 5px;
	vertical-align: bottom;
}


.insert_token {
	position: relative;
	top : 29px;
}

.arg_type {
/* 	margin-top : 2px;	 */
	width : 220px !important;
	display : inline-block;
}

.arg_value {
	display : block;
	width : 220px !important;
}

.btn-icon {
	vertical-align : top;
	display : inline-block;
/* 	*display : inline; */
	cursor : pointer;
	position : relative;
	right : -4px;
    top : -5px;
}

	

/* JONATAN */
.statisticWords {
	border-style: hidden;
}

.searchForWordform {
	cursor:pointer;
}

.searchForWordformInCorpus {
	cursor:pointer;
}

.corpusTitleHeader {
	cursor:pointer;
}

.ext {
	margin-right: 0px;
}

.scroll_checkboxes {
	float: left;
	clear: both;
	width: 400px;
	height: 33px;
	overflow: hidden;
	margin-bottom: 5px;
}

.buttonlink {
	padding: .4em 1em .4em 20px;
	color: #222222;
	text-decoration: none;
	position: relative;
	text-size: .6em;
}

.buttonlink:link {
	color: #222222;
}

.buttonlink:visited {
	color: #222222;
}

.buttonlink:hover {
	color: #444444;
}


.buttonlink span.ui-icon {
	margin: 0 5px 0 0;
	position: absolute;
	left: .2em;
	top: 50%;
	margin-top: -8px;
}

.popupchecks {
	z-index: 9999;
	max-height:600px;
	width: 382px;
/* 	#top: 124px; */
	border-color: #CCCCCC;
	border-style: solid;
	border-width: 1px;
	background-color: #FEFEFE;
	overflow: auto;
	padding-top: 4px;
	margin-top: 0px;
	padding-left: 4px;
	padding-bottom: 8px;
	display: none;
}

.numberOfChildren {
	color: #888888;	
}

.hp_topframe {
	height: 16px;
	width: 353px;
	text-align: center;
	padding-top: 10px;
}

#corpusbox {
	height: 100px;
}

.tree {
	width: 330px;
	position: relative;
	margin-top: 1px;
	margin-bottom: -3px;
	padding-top: 3px;
	padding-bottom: 1px;
}

.collapsed {
	margin-bottom: 0px;
}

.boxdiv {
	margin-top: 2px;
	background-color: #F6F6F6;
	position: relative;
	padding-top: 3px;
	padding-bottom: 1px;
	margin-bottom: 2px;
}

.hplabel {
	background: #F4F4F4;
	padding-right: 6px;
	padding-left: 6px;
	padding-top: 2px;
	padding-bottom: 0px;	
}

.boxlabel {
	padding-right; 6px;
	padding-left: 6px;
	padding-top: 2px;
	padding-bottom: 0px;
}

.boxlabel > span {
	background: #FFFFFF;
}

.checkbox {
	width: 12px;
	height: 12px;
}

/* SLUT JONATAN */



.query_header,.query_footer {
	background-color: #e1e1e1;
	padding: 1px 8px 8px 8px;
	margin: 5px;
	width: 50%;
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	-khtml-border-radius: 5px;
}

.logo {
	float: right;
}

#tabs-container {
	margin-top: -20px;
}

#korp-simple > div {
/* 	#float : left; */
}

#similar_lemgrams {
	margin-top : 5px;
	background-color : #EDF3FF;
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	-khtml-border-radius: 5px;
	padding : 8px;
	overflow-y : hidden;
}

#similar_wrapper {
	max-width: 50%;
}

#similar_lemgrams:empty {
	padding : 0;	
}

#similar_lemgrams p {
	margin-top : 2px;	
}

#similar_lemgrams a {
	padding-right : 5px;
	float : left;
	font-size : 12px;
}

#similar_header {
		
}

#show_more {
	float:right;
	background-color : #EDF3FF;
}
#show_more a {
	font-size : 12px;
	font-weight: bold;
}

.ui-tabs .ui-tabs-nav li a {
	float: left;
	padding-bottom: 0.2em;
	padding-left: 1em;
	padding-right: 1em;
	padding-top: 0.2em;
	text-decoration: none;
}


.ui-autocomplete-tall {
	max-height: 335px;
	overflow-y: auto;
	/* prevent horizontal scrollbar */
	overflow-x: hidden;
	/* add padding to account for vertical scrollbar */
	padding-right: 20px;
}

.ui-preloader {
	position: absolute;
	width: 20px;
	height: 20px;
/* 	background: url(img/preloader.gif) no-repeat 0 0; */
	overflow: hidden;
	background-size : 18px 18px;
}

.results_settings {
	margin: 0px;
	width: 83%;
}

.image_button:hover {
	cursor: pointer;
}


.line_above {
	border-style: dotted;
	border-width: 1px 0px 0px 0px
}

.indent {
	padding-left: 20px
}

.buttons_row {
	border-style: dotted;
	border-width: 1px 0px
}

/* div { padding: 10px 0px }  */
td {
	margin: 0px
}

table {
	margin: 0px 10px;
	padding: 0px 5px
}


.query_token {
	background-color: #e1e1e1;
	display: inline-table;
	*display : inline;
	vertical-align: top;
	padding: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	-khtml-border-radius: 5px;
	border-radius: 5px;
	border : 1px solid #000;
	cursor : move; 
}

.query_token.ui-sortable-helper {
	width : 275px !important;	
}

.cqp_toggle {
	margin-top: 5px;
	margin-bottom: 5px;
}

/* results*/
#results {
/* 	overflow: auto; */
/* 	clear: both; */
/* 	overflow-y: hidden; */
/* 	-ms-overflow-y: hidden; */
}

#Pagination {
	margin-left : 2px;
	font-size : inherit;	
}

#result_controls {
	margin-bottom : -20px;
	margin-left : 2px;
}

#result_controls > * {
	float : left;
}

#controls_n {
	margin-top : 3px;
}

#results-wraper {
	display: none;
}

#results-lemgram {
	overflow:auto;
}
#lemgram_help {
	float : none;
	margin-left : 35px;
	margin-top : 10px;
	margin-bottom : 20px;
}
#lemgram_help > span {
	padding : 10px 10px;
}


.ui-tabs .ui-tabs-nav li a {
	padding-top : 0.4em !important;
	padding-bottom : 0.4em !important;
}

.spinner {
	display : inline-block;
	margin : 3px 2px -2px -10px;
}



/* result tab */
#result-container li:first {
}

.lemgram_result {
	float : left;
	padding-top : 4px;
	padding-bottom : 5px;
	padding-left : 5px;
	padding-right : 2px;
}

.lemgram_result table{
	padding : 0 0;
	margin : 0 0;
}


#table_scrollarea {
	
	overflow: auto; 
	clear: both;
	overflow-y: hidden;
	-ms-overflow-y: hidden;
	
}

#results-table {
	padding-left : 0;
	margin-left : 0;
/* 	max-width : 900px; */
	
	
}

#results-table td{
	border-width : 0px;	
}

#display_word {
/*	position: absolute;*/
/*	top: 50%;*/
	margin : auto 0;
}

#pager-wraper {
	clear: both;
}
#pager-wraper > div {
	margin-bottom : 30px;	
}

.result_table td {
	white-space: nowrap; 
}

.left {
	text-align: right;
	vertical-align: text-top;
}

.match {
	font-weight: bold;
	vertical-align: text-top;
	text-align : center;
	padding : 0 4px;
}

.right {
	vertical-align: text-top;
}

.extra {
	color: #e1e1e1;
}

.alt {
	background: #dde9ff;
}

.alt td {
	border: none;
}

.attr {
	display: none;
	font-size: xx-small;
	vertical-align: bottom;
}

.sentence img {
	border-width: 0px;
}

.word {
	cursor: pointer;	
}

.word:hover {
	color: red;
}

.word_selected {
	border-radius: 10px;
	-moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    -khtml-border-radius: 10px;	
	padding-left: 3px;
	padding-right: 3px;
	margin-left: -3px;
	margin-right: -3px;
		
}

.token_selected {
	color: #fff;
	background-color: #666;
}

.aux_selected {
	color: #000;
	background-color: #FFDDD8;
	
}

#result-container {
	clear: both;
}

/*.lemgram_result td {*/
/*	padding-left : 10px;*/
/*	padding-right : 10px;*/
/*}*/

#json-link {
	float: right;
	display: none;
/* 	#margin-top: -13px; */
}

#json-link img {
	border: 0px;
}

#tooltip-container {
	display: none;
}

#left-column {
	position : absolute;
	left : 8px;
}

#sidebar {
	position: absolute;
	right: 0px;
	width: 250px;
	background-color: #fff;
	border-style: solid;
	border-width: 1px;
	border-color: #999;
/* 	#border-right-color:#fff; */
	padding: 5px 0px 5px 5px;
	border-radius : 4px;
	-moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    -khtml-border-radius: 4px;
	margin-right : 8px;
	margin-left : 8px;
}

#sidebar div {
	margin-bottom: 10px;
}

#sidebar p {
	margin: 0 0 0 0;
}

#sidebar ul{
	margin-top : 0;
	margin-bottom : 2px;
	padding-left : 20px;
	list-style : none;
	line-height: 16px;	
}

#dialog ol {
	margin : 10px 0;
	font-size: 12px;
	list-style : decimal;
}
#dialog ol > li {
	padding : 5px 0;
	line-height : 18px;	
}

#results-stats {
}

#results-stats table {
	border-width: 1px;
	border-collapse: collapse;
	border-color: gray;
	background-color: white;
	border-spacing : 0;
	
}

#results-stats th, #results-stats td {
	border-width: 1px;
	padding: 2px 4px;
	border-style: solid;
	border-spacing : 0;
	border-color: rgb(204, 204, 204);
	background-color: white;
	text-align: right;
}

a.absStat {
	color: #999999;
}

a.absStat:hover {
	color: red;
}

a.relStat {
	color: #000000;
}

a.relStat:hover {
	color: red;
}

.word_column {
	text-align : left;
		
}

.linked_sentence {
	overflow-x : visible;
	font-weight: normal;
	color : #999;
	font-style: italic;
	position : relative;	
}

.linked_sentence td {
	text-align : center;
}	

#about_content ul {
	padding-left : 10px;
	margin-top : 8px;
}

/* when selecting a word, not a lemgram, this pops up. */
.lemgram_select {
	margin-top : 8px;
/* 	border : solid 3px white; */
}

#highlight {
	position : absolute;
	background-color : #FFF3D8;
	
	
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	-khtml-border-radius: 5px;
}

